# sigil

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  action.yml  idea.md  next_actions.md  pyproject.toml
.github/workflows/: badge.yml  deploy-demo.yml  intent.yml  publish-npm.yml  publish.yml
branding/: BRAND.md
components/: intent-system.yaml  sigil-ci.yaml  sigil-viewer.yaml
docs/: CLI.md  index.html  tutorial-adopting-sigil.md
docs/demo/: index.html
docs/marketing/: README-draft.md  competitive-landscape.md  launch-strategy.md  positioning.md  tagline-and-pitch.md
examples/: sigil_demo.json
examples/demo-app/: BEFORE-AFTER.md  DEMO.md  README.md
examples/demo-app/.intent/: config.yaml  export.html  viewer.html
examples/demo-app/app/: page.tsx
examples/demo-app/components/: admin-dashboard.yaml  auth-service.yaml  cart-service.yaml  catalog-service.yaml  notification-service.yaml  order-service.yaml  payment-gateway.yaml  search-service.yaml  web-app.yaml
examples/demo-app/gates/: GATE-0001-catalog-api-compat.yaml  GATE-0002-auth-no-plaintext-passwords.yaml  GATE-0003-order-service-deps.yaml  GATE-0004-spec-quality.yaml  GATE-0005-payment-no-raw-card-numbers.yaml
examples/demo-app/templates/: ADR.md  SPEC.md
gates/: GATE-0001-spec-quality.yaml  GATE-0002-adr-maturity.yaml
intent/intent-system/adrs/: ADR-0001-why-intent-first.md  ADR-0002-repo-schema-for-intent.md  ADR-0003-gate-model.md  ADR-0004-ids-and-wikilinks.md  ADR-0005-human++-integration.md  ADR-0006-graph-storage-format.md
intent/intent-system/specs/: SPEC-0001-intent-first-review-system.md  SPEC-0002-bootstrapper-and-demo-strategy.md  SPEC-0003-sigil-viewer.md  SPEC-0004-sigil-cli.md
intent/sigil-ci/specs/: SPEC-0006-ci-pipeline.md
intent/sigil-viewer/specs/: SPEC-0005-seven-view-modes.md
interfaces/API-INTENT-CLI-V1/: README.md
npm/: README.md  package.json  prepare.mjs  prepare.sh
templates/: ADR.md  COMPONENT.yaml  GATE.yaml  INTERFACE.md  ROLLOUT.md  SPEC.md
tools/intent/: sigil.py
tools/intent/tests/: conftest.py  run_integration.sh  test_ask.py  test_commands.py  test_coverage.py  test_coverage_gaps.py  test_diff.py  test_drift.py  test_export_badge.py  test_gates.py  test_graph.py  test_impact.py  test_integration.py  test_list.py  test_parse.py  test_pr_doctor_ci.py  test_realworld.py  test_remaining_gaps.py  test_review.py  test_serve_review.py  test_show.py  test_status.py  test_watch.py
tools/intent_viewer/: index.html
tools/sigil-vscode/: README.md  package.json
tools/sigil-vscode/src/: cli.ts  extension.ts
(+32 files in other folders)
