[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[project]
name = "sigil-cli"
version = "0.1.0"
description = "Intent-first engineering CLI — structured decisions, enforced by code"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
sigil = "sigil_cli:main"

[tool.hatch.build.targets.wheel.force-include]
"tools/intent/sigil.py" = "sigil_cli.py"

[tool.pytest.ini_options]
testpaths = ["tools/intent/tests"]
