[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sigil-cli"
version = "0.1.0"
description = "Intent-first engineering CLI — structured decisions, enforced by code"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Fielding Johnston", email = "fielding@justfielding.com" },
]
keywords = ["cli", "engineering", "intent", "adr", "specs", "code-review", "knowledge-graph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/fielding/sigil"
Repository = "https://github.com/fielding/sigil"
Documentation = "https://github.com/fielding/sigil#readme"
Issues = "https://github.com/fielding/sigil/issues"

[project.scripts]
sigil = "sigil_cli:main"

[tool.hatch.build.targets.wheel.force-include]
"tools/intent/sigil.py" = "sigil_cli.py"
"tools/intent_viewer/index.html" = "sigil_viewer.html"

[tool.pytest.ini_options]
testpaths = ["tools/intent/tests"]
